tests/suite/snapshots/suite__case_8xdj.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \"  word2\\r\\n\""
  start:
    index: 20
    line: 2
    column: 0
  end:
    index: 20
    line: 2
    column: 0

