tests/suite/snapshots/suite__case_93wf.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Folded
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: ChompingIndicator
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Break
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 8
    line: 1
    column: 0
- token: Indent
  start:
    index: 8
    line: 1
    column: 0
  end:
    index: 10
    line: 1
    column: 2
- token: Scalar
  start:
    index: 10
    line: 1
    column: 2
  end:
    index: 17
    line: 1
    column: 9
- token: Break
  start:
    index: 17
    line: 1
    column: 9
  end:
    index: 19
    line: 2
    column: 0
- token: Indent
  start:
    index: 19
    line: 2
    column: 0
  end:
    index: 21
    line: 2
    column: 2
- token: ScalarBreak
  start:
    index: 21
    line: 2
    column: 2
  end:
    index: 23
    line: 3
    column: 0
- token: Indent
  start:
    index: 23
    line: 3
    column: 0
  end:
    index: 24
    line: 3
    column: 1
- token: ScalarBreak
  start:
    index: 24
    line: 3
    column: 1
  end:
    index: 26
    line: 4
    column: 0
- token: Indent
  start:
    index: 26
    line: 4
    column: 0
  end:
    index: 26
    line: 4
    column: 0
- token: ScalarBreak
  start:
    index: 26
    line: 4
    column: 0
  end:
    index: 28
    line: 5
    column: 0
- token: Indent
  start:
    index: 28
    line: 5
    column: 0
  end:
    index: 30
    line: 5
    column: 2
- token: Scalar
  start:
    index: 30
    line: 5
    column: 2
  end:
    index: 32
    line: 5
    column: 4
- token: ScalarSpace
  start:
    index: 32
    line: 5
    column: 4
  end:
    index: 34
    line: 6
    column: 0
- token: Indent
  start:
    index: 34
    line: 6
    column: 0
  end:
    index: 36
    line: 6
    column: 2
- token: Scalar
  start:
    index: 36
    line: 6
    column: 2
  end:
    index: 41
    line: 6
    column: 7
- token: Break
  start:
    index: 41
    line: 6
    column: 7
  end:
    index: 43
    line: 7
    column: 0

