tests/suite/snapshots/suite__case_96nn_00.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: MappingValue
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Separator
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Literal
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: ChompingIndicator
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 7
    line: 0
    column: 7
- token: Break
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 9
    line: 1
    column: 0
- token: Indent
  start:
    index: 9
    line: 1
    column: 0
  end:
    index: 10
    line: 1
    column: 1
- token: Scalar
  start:
    index: 10
    line: 1
    column: 1
  end:
    index: 14
    line: 1
    column: 5
- token: Break
  start:
    index: 14
    line: 1
    column: 5
  end:
    index: 16
    line: 2
    column: 0

