tests/suite/snapshots/suite__case_98yd.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Comment
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: CommentText
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 15
- token: Break
  start:
    line: 0
    column: 15
  end:
    line: 1
    column: 0

