tests/suite/snapshots/suite__case_9cwy.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: invalid\r\n"
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0

